# BuildTool

./: .gitmodules  CMakeLists.txt
inc/BuildTool/: action.hpp  action_graph.hpp  action_graph.inl  artifact_parser.hpp  build_params.hpp  build_tool.hpp  file_checker.hpp  module_factory.hpp  scheduler.hpp
inc/BuildTool/actions/: ArLinkAction.hpp  GCCAction.hpp  GccObjAction.hpp  ObjAction.hpp
src/: action.cpp  action_graph.cpp  artifact_parser.cpp  build_params.cpp  build_tool.cpp  file_checker.cpp  main.cpp  scheduler.cpp
src/BuildTool/: main.py  target.py
src/actions/: ArLinkAction.cpp  GccObjAction.cpp  GccPchAction.cpp  ObjAction.cpp
test/: CMakeLists.txt  action_graph_test.cpp  action_test.cpp  build_tool_test.cpp  entry  example_target.py  parser_test.cpp  scheduler_test.cpp
test/example/: build.json
test/example/subB/inc/: Class.hpp
test/subB/inc/: ClassB.hpp
test/subB/src/: main.cpp
